--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp"
-    tools:context="com.reskitow.clientbus.MainActivity">
+    tools:context="com.reskitow.clientbus.Control.MainActivity">
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/et_login_encap"
