--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
@@ -11,7 +12,9 @@
     <android.support.design.widget.TextInputLayout
         android:id="@+id/et_login_encap"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:theme="@style/Widget.Design.TextInputLayout"
+        app:errorEnabled="true">
 
         <EditText
             android:id="@+id/et_login"
@@ -19,19 +22,26 @@
             android:layout_height="wrap_content"
             android:hint="@string/et_login"
             android:inputType="textCapCharacters" />
+
     </android.support.design.widget.TextInputLayout>
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="16dp" />
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/et_password_encap"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:theme="@style/Widget.Design.TextInputLayout"
+        app:errorEnabled="true">
 
         <EditText
             android:id="@+id/et_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/et_password"
-            android:inputType="textVisiblePassword" />
+            android:inputType="textPassword" />
     </android.support.design.widget.TextInputLayout>
 
     <Button
@@ -41,4 +51,5 @@
         android:layout_gravity="center"
         android:layout_marginTop="16dp"
         android:text="@string/btn_iniciar_sesion" />
+
 </LinearLayout>
